--- a/Projects/Phaser_Project_Submit/index.html
+++ b/Projects/Phaser_Project_Submit/index.html
@@ -2,11 +2,16 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Jumper - written with Phaser 2</title>
+    <title>Money Bag Collector</title>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/phaser/2.0.7/phaser.min.js" ></script>
    <!--  <link  href="https://cdnjs.cloudflare.com/ajax/libs/phaser/2.0.7/phaser.min.js"> -->
 
-    <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.23.0/phaser.min.js"></script> -->
+      <!-- <style type="text/css">
+      img[src="money_bag.png"]{
+        background-color: gray;
+        opacity: 0.5;
+      }
+    </style> -->
   </head>
   <body>
   	<script type="text/javascript" src="game.js"></script>
