--- a/Labs/Lab3_UserNotes/usernotes.html
+++ b/Labs/Lab3_UserNotes/usernotes.html
@@ -59,6 +59,45 @@
 
 </head>
 <body>
+
+<nav class="navbar navbar-default">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1" aria-expanded="false" >
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button> 
+                <a class="navbar-left navbar-brand" href="#">Labs
+                            </a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <!-- <li class="active"><a href="LearningCenterHome.html">Home <span class="sr-only">(current)</span></a>
+                    </li> -->
+                    <li><a href="../Lab1/lab1.html">Lab 1 (Fruit-Bar Graph)</a></li>
+                    <li><a href="../Lab_2_spriteNum/numbers.html">Lab 2</a></li>
+                    <li><a href="../Lab3_UserNotes/usernotes.html">Lab 3 (Notes)</a></li>
+                    <li><a href="../Lab_Resume/resume.html">Resume</a></li>
+                    <li><a href="../Lab_sound/audio.html">Audio</a></li>
+                    <li><a href="../Lab_video/video_lab.html">Video Players</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="../../Projects">Projects</a></li>
+                    <!-- <li><a href="#l">#</a></li> -->
+                </ul>
+                </li>
+                </ul>
+            </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+</nav>
+
+	
 	<div class="container login-form">
 		<form method="get">
 			<h2 style="text-align: center;">My Notes</h2>
