--- a/Labs/Lab_2_spriteNum/numbers.html
+++ b/Labs/Lab_2_spriteNum/numbers.html
@@ -5,6 +5,10 @@
 	<script src="numbers.js"></script>
 	<script src="animationNum.js"></script>
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.js" integrity="sha256-BTlTdQO9/fascB1drekrDVkaKd9PkwBymMlHOiG+qLI=" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<style type="text/css">
 		canvas{
@@ -15,6 +19,44 @@
 
 </head>
 <body>
+
+<nav class="navbar navbar-default">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1" aria-expanded="false" >
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button> 
+                <a class="navbar-left navbar-brand" href="#">Labs
+                            </a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <!-- <li class="active"><a href="LearningCenterHome.html">Home <span class="sr-only">(current)</span></a>
+                    </li> -->
+                    <li><a href="../Lab1/lab1.html">Lab 1 (Fruit-Bar Graph)</a></li>
+                    <li><a href="../Lab_2_spriteNum/numbers.html">Lab 2</a></li>
+                    <li><a href="../Lab3_UserNotes/usernotes.html">Lab 3 (Notes)</a></li>
+                    <li><a href="../Lab_Resume/resume.html">Resume</a></li>
+                    <li><a href="../Lab_sound/audio.html">Audio</a></li>
+                    <li><a href="../Lab_video/video_lab.html">Video Players</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="../../Projects">Projects</a></li>
+                    <!-- <li><a href="#l">#</a></li> -->
+                </ul>
+                </li>
+                </ul>
+            </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+</nav>	
+
 
 <canvas id="myCanvas" width="960" height="480"></canvas>
 <div class="container">
