--- a/Labs/Lab_Resume/resume.html
+++ b/Labs/Lab_Resume/resume.html
@@ -1,16 +1,62 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
 	
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+	<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script> -->
 	<link rel="stylesheet" type="text/css" href="resume.css">
+
+	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.js" integrity="sha256-BTlTdQO9/fascB1drekrDVkaKd9PkwBymMlHOiG+qLI=" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 	<title>Resume</title>
 </head>
 <body>
+<nav class="navbar navbar-default">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1" aria-expanded="false" >
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button> 
+                <a class="navbar-left navbar-brand" href="#">Labs
+                            </a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <!-- <li class="active"><a href="LearningCenterHome.html">Home <span class="sr-only">(current)</span></a>
+                    </li> -->
+                    <li><a href="../Lab1/lab1.html">Lab 1 (Fruit-Bar Graph)</a></li>
+                    <li><a href="../Lab_2_spriteNum/numbers.html">Lab 2</a></li>
+                    <li><a href="../Lab3_UserNotes/usernotes.html">Lab 3 (Notes)</a></li>
+                    <li><a href="../Lab_Resume/resume.html">Resume</a></li>
+                    <li><a href="../Lab_sound/audio.html">Audio</a></li>
+                    <li><a href="../Lab_video/video_lab.html">Video Players</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="../../Projects">Projects</a></li>
+                    <!-- <li><a href="#l">#</a></li> -->
+                </ul>
+                </li>
+                </ul>
+            </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+</nav>
+
+
+
+
+
 	<div class="container" id="bodyID">
 		<div id="header">
 			<h1 class="text-center">Resume</h1>
@@ -24,7 +70,8 @@
 				</div>
 			</div> -->
 			<div class="row" id="row1"> 
-				<div class="col-md-6 offset-md-1" id="aboutID">
+				 <!-- Works in bootstrap 4:  offset-md-1 -->
+				<div class="col-md-6 col-md-offset-1" id="aboutID">
 					<h4>About:</h4> 
 					<p>I am currently working as a Peer Mentor and a tutor at the Borough of Manhattan Community College. My mentees, or the students that I tutor, all want to succeed but sometimes lack the discipline to reach these heights.  I find joy in being able to see myself succeed, but I find greater joy in succeeding alongside others. I believe that guiding people should be first nature. </p>
 
@@ -39,7 +86,7 @@
 			</div>	
 
 			<div class="row" id="row2">
-				<div class="col-md-6 offset-md-1"> <!-- Tech row -->
+				<div class="col-md-6 col-md-offset-1"> <!-- Tech row -->
 					<h4>Experience</h4>
 						<label for="l1">Project Impact, New York, NY [Mentor] </label>
 						<div id="l1">
