--- a/Projects/Data_visualization_Project/data_visual.html
+++ b/Projects/Data_visualization_Project/data_visual.html
@@ -34,6 +34,43 @@
 </head>
 <body>
 
+<nav class="navbar navbar-default">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1" aria-expanded="false" >
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button> 
+                <a class="navbar-left navbar-brand" href="#">Projects
+                            </a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <!-- <li class="active"><a href="LearningCenterHome.html">Home <span class="sr-only">(current)</span></a>
+                    </li> -->
+                    <li><a href="../Animation_Project/cursor_animation.html">Animation Proj</a></li>
+                    <li><a href="../Data_visualization_Project/data_visual.html">Data Visualization Prof</a></li>
+                    <li><a href="../Phaser_Project_Submit/index.html">Phaser Prof</a></li>
+                    <li><a href="../Speech_Recognition_Project/speech_recognition.html">Speech Recognition</a></li>
+                    <li><a href="../Project_1/index_Project1.html">Project 1 (Cartoon)</a></li>
+
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="../../Labs">Labs</a></li>
+                    <li><a href="#l">#</a></li>
+                </ul>
+                </li>
+                </ul>
+            </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+</nav>    
+
 <button onclick="countMe(); return false" class="btn btn-primary btn-block">Click to show graphs</button>
 <canvas id="displayBar" width="800" height="450"> </canvas>
 <br><br>
