Removed unnecessary anchor tag

--- a/Projects/Phaser_Project_Submit/index.html
+++ b/Projects/Phaser_Project_Submit/index.html
@@ -52,7 +52,7 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="../../Labs">Labs</a></li>
-                    <li><a href="#l">#</a></li>
+                    <!-- <li><a href="#l">#</a></li> -->
                 </ul>
                 </li>
                 </ul>
