--- a/Projects/Speech_Recognition_Project/speech_recognition.html
+++ b/Projects/Speech_Recognition_Project/speech_recognition.html
@@ -84,7 +84,7 @@ background: linear-gradient(90deg, rgba(13,11,52,1) 0%, rgba(13,69,140,1) 19%, r
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="../../Labs">Labs</a></li>
-                    <li><a href="#l">#</a></li>
+                    <!-- <li><a href="#l">#</a></li> -->
                 </ul>
                 </li>
                 </ul>
