--- a/Projects/Animation_Project/cursor_animation.html
+++ b/Projects/Animation_Project/cursor_animation.html
@@ -149,7 +149,7 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="../../Labs">Labs</a></li>
-                    <li><a href="#l">#</a></li>
+                    <!-- <li><a href="#l">#</a></li> -->
                 </ul>
                 </li>
                 </ul>
