--- a/Projects/Animation_Project/cursor_animation.html
+++ b/Projects/Animation_Project/cursor_animation.html
@@ -148,7 +148,7 @@
 
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="../../Labs">Labs</a></li>
+                    <li><a href="../../Labs/Lab1/lab1.html">Labs</a></li>
                     <!-- <li><a href="#l">#</a></li> -->
                 </ul>
                 </li>
