--- a/Projects/Project_1/index_Project1.html
+++ b/Projects/Project_1/index_Project1.html
@@ -42,7 +42,7 @@
 
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="../../Labs">Labs</a></li>
+                    <li><a href="../../Labs/Lab1/lab1.html">Labs</a></li>
                     <!-- <li><a href="#l">#</a></li> -->
                 </ul>
                 </li>
