Projects nav link redirects to Animation Project

--- a/Labs/Lab_sound/audio.html
+++ b/Labs/Lab_sound/audio.html
@@ -68,7 +68,7 @@
                     <li><a href="../Lab_video/video_lab.html">Video Players</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="../../Projects">Projects</a></li>
+                    <li><a href="../../Projects/Animation_Project/cursor_animation.html">Projects</a></li>
                     <!-- <li><a href="#l">#</a></li> -->
                 </ul>
                 </li>
