--- a/Projects/Data_visualization_Project/data_visual.html
+++ b/Projects/Data_visualization_Project/data_visual.html
@@ -54,8 +54,8 @@
                 <ul class="nav navbar-nav">
                     <!-- <li class="active"><a href="LearningCenterHome.html">Home <span class="sr-only">(current)</span></a>
                     </li> -->
-                    <li><a href="../Animation_Project/cursor_animation.html">Animation Proj</a></li>
-                    <li><a href="../Data_visualization_Project/data_visual.html">Data Visualization Prof</a></li>
+                    <li><a href="../Animation_Project/cursor_animation.html">Animation Project</a></li>
+                    <li><a href="../Data_visualization_Project/data_visual.html">Data Visualization Project</a></li>
                     <li><a href="../Phaser_Project_Submit/index.html">Phaser Prof</a></li>
                     <li><a href="../Speech_Recognition_Project/speech_recognition.html">Speech Recognition</a></li>
                     <li><a href="../Project_1/index_Project1.html">Project 1 (Cartoon)</a></li>
