--- a/Projects/Speech_Recognition_Project/speech_recognition.html
+++ b/Projects/Speech_Recognition_Project/speech_recognition.html
@@ -34,9 +34,14 @@ background: linear-gradient(90deg, rgba(13,11,52,1) 0%, rgba(13,69,140,1) 19%, r
         color: #0d458c;
     }
     .btn {        
-        font-size: 20px;
+        font-size: 20px; 
         font-weight: bold;
+        height: 50px;
+        margin: 10px auto;
+        width: 80%;
+        margin-left: 100px;
        }
+   
     /*.formcontrol, .form-footer{
         background: #ecf0f1;
         border-color: #dee4e7;
@@ -95,7 +100,7 @@ background: linear-gradient(90deg, rgba(13,11,52,1) 0%, rgba(13,69,140,1) 19%, r
 <div class="login-form"> <h3 class="text-center">Instructions</h3>
 	<div class="hints form-group"> </div>
 </div>
-<button id="buttonMe" class="btn btn-success btn-block">Press to speak</button>
+<button id="buttonMe" class="btn btn-success ">Press to speak</button>
 <canvas id="myCanvas" width="800" height="600" >
 </canvas>
 
