--- a/Projects/Animation_Project/cursor_animation.html
+++ b/Projects/Animation_Project/cursor_animation.html
@@ -117,6 +117,10 @@
                 padding: 0;
                 background-color: rgba(0,0,0,0.05);
             }
+            /*.nav > ul >li > a:hover{
+                background-color:#6D99D6;
+                
+            }*/
         </style>
     </head>
     <body>
