--- a/Projects/Animation_Project/cursor_animation.html
+++ b/Projects/Animation_Project/cursor_animation.html
@@ -146,7 +146,7 @@
                     </li> -->
                     <li><a href="cursor_animation.html">Animation Project</a></li>
                     <li><a href="../Data_visualization_Project/data_visual.html">Data Visualization Project</a></li>
-                    <li><a href="../Phaser_Project_Submit/index.html">Phaser Prof</a></li>
+                    <li><a href="../Phaser_Project_Submit/index.html">Phaser Project</a></li>
                     <li><a href="../Speech_Recognition_Project/speech_recognition.html">Speech Recognition</a></li>
                     <li><a href="../Project_1/index_Project1.html">Project 1 (Cartoon)</a></li>
 
