--- a/Projects/Speech_Recognition_Project/speech_recognition.html
+++ b/Projects/Speech_Recognition_Project/speech_recognition.html
@@ -82,7 +82,7 @@ background: linear-gradient(90deg, rgba(13,11,52,1) 0%, rgba(13,69,140,1) 19%, r
                     </li> -->
                     <li><a href="../Animation_Project/cursor_animation.html">Animation Project</a></li>
                     <li><a href="../Data_visualization_Project/data_visual.html">Data Visualization Project</a></li>
-                    <li><a href="../Phaser_Project_Submit/index.html">Phaser Prof</a></li>
+                    <li><a href="../Phaser_Project_Submit/index.html">Phaser Project</a></li>
                     <li><a href="../Speech_Recognition_Project/speech_recognition.html">Speech Recognition</a></li>
                     <li><a href="../Project_1/index_Project1.html">Project 1 (Cartoon)</a></li>
 
